--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -1,49 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Interactive rating component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Interactive rating component</title>
 
-  <!-- Rating state start -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main class=>
+      <div class="rating">
+        <div class="ranking">
+          <span><img src="images/icon-star.svg" alt="star" class="star" /></span>
+          <h1>How did we do?</h1>
+          <p>
+            Please let us know how we did with your support request. All
+            feedback is appreciated to help us improve our offering!
+          </p>
+          <div class="numbers">
+            <div class="circle-numbers">
+              <input type="radio" id="1" name="1" value="1" />
+              <label for="1">1</label>
+            </div>
+            <div class="circle-numbers">
+              <input type="radio" id="2" name="2" value="2" />
+              <label for="2">2</label>
+            </div>
+            <div class="circle-numbers">
+              <input type="radio" id="3" name="3" value="3" />
+              <label for="3">3</label>
+            </div>
+            <div class="circle-numbers">
+              <input type="radio" id="4" name="4" value="4" />
+              <label for="4">4</label>
+            </div>
+            <div class="circle-numbers">
+              <input type="radio" id="5" name="5" value="5" />
+              <label for="5">5</label>
+            </div>
+          </div>
+          <button type="submit">Submit</button>
+        </div>
+      </div>
+    </main>
 
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
