--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -19,20 +19,40 @@
   <body>
     <div class="rating">
       <div class="ranking">
-        <img src="images/icon-star.svg" alt="star" class="star" />
-        <h1>How did we do?</h1>
-        <p class="message">
-          Please let us know how we did with your support request. All feedback
-          is appreciated to help us improve our offering!
-        </p>
-        <div class="numbers">
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
-          <button>4</button>
-          <button>5</button>
+        <div class="star">
+          <img src="images/icon-star.svg" alt="star" class="star" />
         </div>
-        <button class="submit" id="submit">Submit</button>
+        <div class="body">
+          <h1>How did we do?</h1>
+          <p class="message">
+            Please let us know how we did with your support request. All
+            feedback is appreciated to help us improve our offering!
+          </p>
+          <p id="error-message" class="error-message">Please select a score!</p>
+          <div class="numbers">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>5</button>
+          </div>
+          <button class="submit" id="submit">Submit</button>
+        </div>
+      </div>
+      <div id="evaluation" class="thank-you">
+        <div>
+          <img src="images/illustration-thank-you.svg" />
+          <div>
+            <span id="select-message" class="select-message"
+              >You selected <span id="selected-number"></span>
+            </span>
+          </div class="body">
+          <h1>Thank You!</h1>
+          <p>
+            We appreciate you taking the time to give. If you ever need more
+            support, don't hesitate to get in touch!
+          </p>
+        </div>
       </div>
     </div>
 
