--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -45,7 +45,7 @@
         </div>
           <div>
             <span id="select-message" class="select-message"
-              >You selected <span id="selected-number"></span>
+              >You selected 1 out of 5
             </span>
           </div >
           <h1 class="heading">Thank You!</h1>
