--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -43,10 +43,10 @@
         <div class="body">
           <img src="images/illustration-thank-you.svg" />
         </div>
-          <div>
-            <span id="select-message" class="select-message"
+          <div id="select-message" class="select-message">
+      
               >You selected 1 out of 5
-            </span>
+          
           </div >
           <h1 class="heading">Thank You!</h1>
           <p>
