--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
+    <div>
       <div class="container">
         <div class="card">
           <img src="images/illustration-hero.svg" class="hero-image" />
@@ -40,13 +40,13 @@
               <a class="change">Change</a>
             </div>
 
-            <div class="card-payment">
-              <a class="payment">Proceed to Payment</a>
-              <a class="cancel">Cancel Order</a>
+            <div class="button">
+              <a class="btn payment-btn">Proceed to Payment</a>
+              <a class="btn cancel-btn">Cancel Order</a>
             </div>
           </div>
         </div>
       </div>
-    </main>
+    </div>
   </body>
 </html>
