--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -18,12 +18,12 @@
   </head>
   <body>
     <main>
-      <section class="card">
+      <section>
         <h1 class="card-heading">
           Get <span>insights</span> that help your business grow.
         </h1>
         <div class="card-content">
-          <p>
+          <p class="card-lead">
             Discover the benefits of data analytics and make better decisions
             regarding revenue, customer experience, and overall efficiency.
           </p>
@@ -44,14 +44,20 @@
         </div>
       </section>
       <div class="card-image">
-        <img src="images/image-header-desktop.jpg" />
+        <div class="overlay">
+          <div class="overlay-2"></div>
+        </div>
       </div>
     </main>
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Namrata Sinha</a>.
-    </div> -->
+
+    <footer class="attribution">
+      <p>
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >
+      </p>
+      <p>Coded by <a href="#">Namrata Sinha</a></p>
+    </footer>
   </body>
 </html>
