--- a/3-column-preview-card-component-main/index.html
+++ b/3-column-preview-card-component-main/index.html
@@ -1,36 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | 3-column preview card component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
+    <title>Frontend Mentor | 3-column preview card component</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <section class="card card-1">
+        <img src="images/icon-sedans.svg" />
+        <div>
+          <h1>Sedans</h1>
+          <p>
+            Choose a sedan for its affordability and excellent fuel economy.
+            Ideal for cruising in the city or on your next road trip.
+          </p>
+        </div>
+        <div>
+          <button class="learn-more" href="#">Learn More</button>
+        </div>
+      </section>
+      <section class="card card-2">
+        <img src="images/icon-suvs.svg" />
+        <div>
+          <h1>Suvs</h1>
+          <p>
+            SUVs Take an SUV for its spacious interior, power, and versatility.
+            Perfect for your next family vacation and off-road adventures.
+          </p>
+        </div>
+        <button class="learn-more" href="#">Learn More</button>
+      </section>
+      <section class="card card-3">
+        <img src="images/icon-luxury.svg" />
+        <div>
+          <h1>Luxury</h1>
+          <p>
+            Cruise in the best car brands without the bloated prices. Enjoy the
+            enhanced comfort of a luxury rental and arrive in style.
+          </p>
+        </div>
+        <button class="learn-more" href="#">Learn More</button>
+      </section>
+    </main>
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+    <foother>
+      <div class="attribution">
+        <p>
+         Challenge by
+         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+           >Frontend Mentor</a
+         >.
+        </p>
+        <p>
+         Coded by <a href="https://github.com/nmrtsnh" target="_blank">Namrata Sinha</a>.
+        </p>
+    </foother>
+ 
+     
 
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    
+  </body>
 </html>
