--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -21,12 +21,17 @@
         <div class="box">
           <img src="images/illustration-box-desktop.svg" />
         </div>
-        <div class="images">
+        <div class="container-box">
           <div class="card">
-            <div class="images"></div>
             <div class="card-images-dsktop">
-              <img src="images/bg-pattern-desktop.svg" />
-              <img src="images/illustration-woman-online-desktop.svg" />
+              <img
+                src="images/illustration-woman-online-desktop.svg"
+                class="woman-online-desktop"
+              />
+              <img
+                src="images/bg-pattern-desktop.svg"
+                class="bg-pattern-desktop"
+              />
             </div>
             <div class="questions">
               <h1>Faq</h1>
@@ -46,7 +51,7 @@
                 </div>
               </div>
               <div class="card-question">
-                <div class="questions-title">
+                <div class="question-title">
                   <h2>What is the maximum file upload size?</h2>
                   <button type="button" class="question-button">
                     <img src="images/icon-arrow-down.svg" />
@@ -63,7 +68,7 @@
               <div class="card-question">
                 <div class="question-title">
                   <h2>How do I reset my password?</h2>
-                  <button type="buttom" class="question-button">
+                  <button type="button" class="question-button">
                     <img src="images/icon-arrow-down.svg" />
                   </button>
                 </div>
@@ -111,12 +116,12 @@
       </div>
     </main>
 
-    <div class="attribution">
+    <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    </div> -->
     <script src="script.js"></script>
   </body>
 </html>
